# confluence-assistant-skills-lib

./: CHANGELOG.md  CLAUDE.md  CLI_CLIENT_PATTERN_PRD.md  pyproject.toml
.api-specs/: confluence-v2.postman.json
.github/workflows/: publish.yml  test.yml
docs/: api-discrepancy-report.md  examples.md  index.md
docs/api/: adf.md  client.md  errors.md  formatters.md  validators.md  xhtml.md
src/confluence_as/cli/commands/: hierarchy_cmds.py  page_cmds.py  property_cmds.py
src/confluence_as/mock/: base.py
src/confluence_as/mock/mixins/: content.py  page.py
src/confluence_assistant_skills/: __init__.py  adf_helper.py  config_manager.py  confluence_client.py  error_handler.py  formatters.py  markdown_parser.py  space_context.py  validators.py  xhtml_helper.py
src/confluence_assistant_skills/cli/: cli_utils.py  main.py
src/confluence_assistant_skills/cli/commands/: admin_cmds.py  analytics_cmds.py  attachment_cmds.py  bulk_cmds.py  comment_cmds.py  hierarchy_cmds.py  jira_cmds.py  label_cmds.py  ops_cmds.py  page_cmds.py  permission_cmds.py  property_cmds.py  search_cmds.py  space_cmds.py  template_cmds.py  watch_cmds.py
src/confluence_assistant_skills/mock/: __init__.py  base.py  client.py
src/confluence_assistant_skills/mock/mixins/: content.py  page.py  space.py
src/confluence_assistant_skills_lib/: __init__.py  config_manager.py
tests/: __init__.py  conftest.py  test_adf_helper.py  test_cache.py  test_cli.py  test_config_manager.py  test_confluence_client.py  test_error_handler.py  test_formatters.py  test_integration.py  test_validators.py  test_xhtml_helper.py
tests/e2e/: README.md  conftest.py  runner.py  test_cases.yaml  test_plugin_e2e.py
tests/live/: __init__.py  conftest.py  test_analytics_live.py  test_ancestor_live.py  test_attachment_download_live.py  test_attachment_live.py  test_attachment_metadata_live.py  test_attachment_search_live.py  test_attachment_types_live.py  test_attachment_update_live.py  test_attachment_versions_live.py  test_blogpost_live.py  test_blueprint_live.py  test_breadcrumb_live.py  test_bulk_label_live.py  test_bulk_permission_live.py  test_comment_author_live.py  test_comment_count_live.py  test_comment_edit_live.py  test_comment_live.py  test_comment_resolve_live.py  test_comment_threads_live.py  test_content_stats_live.py  test_contributor_stats_live.py  test_cql_advanced_live.py  test_depth_live.py  test_descendants_live.py  test_hierarchy_live.py  test_inline_comment_live.py  test_jira_links_live.py  test_jira_live.py  test_jira_macros_live.py  test_jira_roadmap_live.py  test_label_copy_live.py  test_label_live.py  test_label_prefix_live.py  test_label_search_live.py  test_label_suggestions_live.py  test_notification_settings_live.py  test_page_archive_live.py  (+54 more)
tests/unit/: conftest.py  test_analytics.py  test_attachment.py  test_comment.py  test_label.py  test_page.py  test_permission.py  test_property.py  test_search.py  test_template.py  test_watch.py
