[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluence-assistant-skills-lib"
dynamic = ["version"]
description = "Python library for Confluence Cloud REST API - shared utilities for Confluence automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "grandcamel", email = "noreply@github.com" }
]
keywords = [
    "confluence",
    "atlassian",
    "api",
    "rest",
    "cloud",
    "automation",
    "documentation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.28.0",
    "assistant-skills-lib>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "coverage>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests>=2.28.0",  # Type stubs for requests
    "bandit>=1.7.0",
    "click>=8.0.0",  # Required for CLI tests
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/grandcamel/confluence-assistant-skills-lib"
Documentation = "https://github.com/grandcamel/confluence-assistant-skills-lib#readme"
Repository = "https://github.com/grandcamel/confluence-assistant-skills-lib"
Issues = "https://github.com/grandcamel/confluence-assistant-skills-lib/issues"
Changelog = "https://github.com/grandcamel/confluence-assistant-skills-lib/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/confluence_assistant_skills/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_assistant_skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: marks tests as end-to-end tests requiring Claude Code CLI",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/confluence_assistant_skills"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "assistant_skills_lib.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (requires Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ are re-exports
"tests/*" = ["B011"]      # assert False is fine in tests

[tool.ruff.lint.isort]
known-first-party = ["confluence_assistant_skills"]
